--- a/live-client/src/app/routes/live/live.component.html
+++ b/live-client/src/app/routes/live/live.component.html
@@ -1,1 +1,6 @@
-<p>live works!</p>
+<!--<app-number-scroll [number]="numberStr"></app-number-scroll>-->
+<app-number-scroll2 [num]="number" [symbol]="','"></app-number-scroll2>
+<div>----------------------</div>
+
+<button (click)="change()">+</button>
+<button (click)="change2()">-</button>
