1.文件分片上传

--- a/live-client/src/app/routes/live/live.component.html
+++ b/live-client/src/app/routes/live/live.component.html
@@ -4,3 +4,13 @@
 
 <button (click)="change()">+</button>
 <button (click)="change2()">-</button>
+<div>----------------------</div>
+
+<div id="container">
+
+</div>
+
+<div>----------------------</div>
+<div id="container2">
+
+</div>
